PROD-12-18-19/force-app/main/default/objects/User/fields/BFIN_Office__c.field-meta.xml
<CustomField>
    <fullName>BFIN_Office__c</fullName>
    <label>BFIN Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia (Sydney)</fullName>
            </value>
            <value>
                <fullName>Brazil (Rio de Janeiro)</fullName>
            </value>
            <value>
                <fullName>Brazil (San Paulo)</fullName>
            </value>
            <value>
                <fullName>Calgary</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>India (Bangalore)</fullName>
            </value>
            <value>
                <fullName>India (Mumbai)</fullName>
            </value>
            <value>
                <fullName>London (UK)</fullName>
            </value>
            <value>
                <fullName>Montreal</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>Vancouver</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>