PROD-12-18-19/force-app/main/default/objects/User/fields/Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>Functional_Group__c</fullName>
    <label>Functional Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMT - Infrastructure</fullName>
            </value>
            <value>
                <fullName>PMT - Private Equity</fullName>
            </value>
            <value>
                <fullName>PMT - Real Estate</fullName>
            </value>
            <value>
                <fullName>TSG</fullName>
            </value>
            <value>
                <fullName>PFG - SF</fullName>
            </value>
            <value>
                <fullName>PFG - FinOps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>