PROD-12-18-19/force-app/main/default/objects/User/fields/PFG_of_Calls_Emails_YTD__c.field-meta.xml
<CustomField>
    <fullName>PFG_of_Calls_Emails_YTD__c</fullName>
    <description>Number of Tasks in YTD for users</description>
    <inlineHelpText>Number of Tasks in YTD for users</inlineHelpText>
    <label>PFG # of Calls/Emails YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>