PROD-12-18-19/force-app/main/default/objects/User/fields/PSG_Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>PSG_Sales_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSG Sales Group</label>
    <type>Checkbox</type>
</CustomField>