PROD-12-18-19/force-app/main/default/objects/User/fields/sharem__FolderizeState__c.field-meta.xml
<CustomField>
    <fullName>sharem__FolderizeState__c</fullName>
    <description>this field stores description of Folderize state for the user</description>
    <label>FolderizeState</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>