PROD-12-18-19/force-app/main/default/objects/User/listViews/BLP_Users.listView-meta.xml
<ListView>
    <fullName>BLP_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>startsWith</operation>
        <value>BLP</value>
    </filters>
    <label>BLP Users</label>
</ListView>