PROD-12-18-19/force-app/main/default/objects/User/listViews/Content_Users.listView-meta.xml
<ListView>
    <fullName>Content_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>SFCONTENT_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFCONTENT_USER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Content Users</label>
</ListView>