PROD-12-18-19/force-app/main/default/objects/User/listViews/FIS_DX.listView-meta.xml
<ListView>
    <fullName>FIS_DX</fullName>
    <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>11/27/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Paradis,Neal,cantor,tang,low,Cangeloso,tsuchida,grand,faraz,lackner</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>bock,decamp,cleary,siha,kim,russell,fufidio,Figurniak,dhaliwal,macdonald,cooper</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>Youngsoo,Ki-Tae,Eugene,brittany,grace,sean</value>
    </filters>
    <label>FIS DX</label>
</ListView>