PROD-12-18-19/force-app/main/default/objects/User/listViews/Last_modified_by_J.listView-meta.xml
<ListView>
    <fullName>Last_modified_by_J</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_UPDATE_BY_ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Last modified by J</label>
    <sharedTo>
        <group>Sys_Admin_Support</group>
    </sharedTo>
</ListView>