PROD-12-18-19/force-app/main/default/objects/User/listViews/PSG_Users.listView-meta.xml
<ListView>
    <fullName>PSG_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>LOCALE</columns>
    <columns>MARKETING_USER</columns>
    <columns>PSG_Sales_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Group__c</field>
        <operation>contains</operation>
        <value>PSG</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>PSG ALTs</value>
    </filters>
    <label>PSG Users</label>
</ListView>